Import of ZOFFIX/Net-OBEX-0.004 from CPAN.
gitpan-cpan-distribution: Net-OBEX
gitpan-cpan-version:      0.004
gitpan-cpan-path:         ZOFFIX/Net-OBEX-0.004.tar.gz
gitpan-cpan-author:       ZOFFIX
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Net-OBEX
 
+0.004   Mar 20, 2008
+        Added C<STATUS METHODS>, C<mtu()> and C<put()> functionality
+
 0.003   Mar 5, 2008
         Fixed the bug where contents of End Of Body headers
             were not appended to returns of get()
