Import of ZOFFIX/Net-OBEX-0.005 from CPAN.
gitpan-cpan-distribution: Net-OBEX
gitpan-cpan-version:      0.005
gitpan-cpan-path:         ZOFFIX/Net-OBEX-0.005.tar.gz
gitpan-cpan-author:       ZOFFIX
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Net-OBEX
 
+0.005   July 27, 2009
+        Added my links
+
 0.004   Mar 20, 2008
         Added C<STATUS METHODS>, C<mtu()> and C<put()> functionality
 
